refator: 채팅 나가기, 채팅 삭제 분리, 채팅방 생성 1대1,그룹채팅,그룹채팅 혼자 개설로 리팩토링